[gd_scene load_steps=6 format=3 uid="uid://n8n1rx3e2iy8"]

[ext_resource type="Script" uid="uid://n8n1rx3e2iy7" path="res://game/ui/pause_menu/pause_menu.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://c7u2g7u3nqj0w" path="res://game/ui/theme/ui_theme.tres" id="2_theme"]
[ext_resource type="LabelSettings" uid="uid://c6k0xq1m5p4e2" path="res://game/ui/theme/label_settings_title.tres" id="3_hj2f6"]
[ext_resource type="Texture2D" uid="uid://dg776j1q6srlf" path="res://assets/ui/panels/wood_panel_dark.png" id="4_ortre"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yocbn"]
texture = ExtResource("4_ortre")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.05, 0.03, 0.55)

[node name="Title" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 31.0
text = "Paused"
label_settings = ExtResource("3_hj2f6")
horizontal_alignment = 1

[node name="CenterContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(180, 130)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -84.0
offset_right = 90.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Paused"
label_settings = ExtResource("3_hj2f6")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxTexture_yocbn")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBox/HSeparator"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 40.0

[node name="ResumeButton" type="Button" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitToMenuButton" type="Button" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu"

[node name="QuitButton" type="Button" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit Desktop"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxTexture_yocbn")
